# pythonProjectPDF

./: .gitignore  CLAUDE.md  PDFgj.py  README.md  findings.md  progress.md  pyproject.toml  requirements.txt  runPDF.bat  task_plan.md  使用手册.txt
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-14-cli-default-mode-redesign.md  2026-05-14-pdf-merge-improvement.md
docs/superpowers/specs/: 2026-05-01-pdfgj-refactor-design.md  2026-05-05-ppt-to-pdf-design.md  2026-05-14-cli-default-mode-redesign.md  2026-05-14-image-convert-improvement-design.md  2026-05-14-pdf-merge-improvement-design.md
pdfgj/: __init__.py  __main__.py  cli.py  com_core.py  constants.py  deps.py  excel_convert.py  image_convert.py  image_processor.py  merge.py  pdf_processor.py  ppt_convert.py  utils.py  word_convert.py
tests/: conftest.py  test_cli.py  test_com_core.py  test_deps.py  test_excel_convert.py  test_image_convert.py  test_image_processor.py  test_merge.py  test_pdf_processor.py  test_ppt_convert.py  test_utils.py  test_word_convert.py
