[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgj"
version = "1.0.0"
description = "图片 / Word / Excel / PPT 转 PDF 与 PDF 合并工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pillow>=12.0",
    "PyPDF2>=3.0",
    "pywin32>=300; sys_platform == 'win32'",
]

[project.scripts]
pdfgj = "pdfgj.cli:main"
